# fidx

./: .dockerignore  .gitignore  AI_ATTRIBUTION.md  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SOURCE_HEADER_EXAMPLES.md  ai-attribution-policy.json  codemeta.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-matrix.yml  release.yml
.well-known/: tdmrep.json
LICENSES/: AI-Idea-Attribution-Addendum-1.0.txt
bench/: README.md  bench_symdex.py  corpora.py  duckdb_code_bench.py  gen_queries.py  judge_purity.py  knee_code_eval.py  knee_eval.py  paraphrase_bench.py  run_bench.py  truncation_sweep.py  verify_nomatch.py
bench/data/: queries-chat-paraphrase.jsonl  queries-code-paraphrase.jsonl  queries-docs-paraphrase.jsonl  queries-docs-small-human.jsonl  queries-docs-small-paraphrase.jsonl
docker/: Dockerfile.linux
docs/: AGENT_GUIDE.md  BENCHMARKS.md  DESIGN.md
scripts/: e2e_smoke.py  verify-install.sh
src/fidx/: __init__.py  calibrate.py  chunker.py  cli.py  config.py  daemon.py  db.py  diagnostics.py  embedder.py  indexer.py  search.py  truncate.py  vector_store.py
tests/: conftest.py  test_calibrate.py  test_chunker.py  test_daemon_security.py  test_diagnostics.py  test_e2e_gen.py  test_embedder.py  test_indexer.py  test_search.py  test_search_json.py  test_truncate.py  test_vector_store.py
tests/fixtures/: e2e-corpus.sha256
